--- a/index.html
+++ b/index.html
@@ -1,12 +1,55 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="format-detection" content="telephone=no">
+
   <title>STX건설</title>
-</head>
-<body>
+  <link rel="shortcut icon" href="images/favicon.jpg" />
+  <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon.png">
+
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+
+  <meta name="description" content="STX 건설 웹사이트입니다." />
+  <meta name="keywords" content="HTML, CSS, JavaScript" />
+  <meta name="author" content="Dale Seo" />
+
+  <meta property="og:title" content="STX 건설">
+  <meta property="og:site_name" content="STX 건설" />
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://www.stxconst.co.kr/">
+  <meta property="og:image" content="https://s.pstatic.net/static/www/mobile/edit/2016/0705/mobile_212852414260.png">
+  <meta property="og:description" content="STX 건설 웹사이트입니다." />
+
+  <link rel="stylesheet" href="css/reset.css">
+  <!-- 구글폰츠 -->
+  <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
+    rel="stylesheet">
+  <!-- 폰드어썸 -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
+    integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- 조건실행 -->
+  <!--[if lt IE 9]> 
+        <script src="js/html5shiv.js"></script>
+    <![endif]-->
+  <script src="js/prefixfree.min.js"></script>
+  <script src="js/respond.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+  <link rel="stylesheet" href="js/swiper/swiper.min.css">
+  <script src="js/swiper/swiper.min.js"></script>
+
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/script.js"></script>
   
+</head>
+
+<body>
+
 </body>
+
 </html>
