헤더, 비주얼, 업무 파트, 새소식 완료

--- a/index.html
+++ b/index.html
@@ -49,7 +49,153 @@
 </head>
 
 <body>
+  <div class="wrap">
+    <!-- 상단 -->
+    <header class="header">
+      <div class="inner">
+        <a href="#" class="logo">stx건설</a>
+        <nav class="gnb">
+          <ul class="depth1">
+            <li>
+              <a href="#">회사소개</a>
+              <ul class="depth2">
+                <li><a href="#">인사말</a></li>
+                <li><a href="#">STX건설</a></li>
+                <li><a href="#">기업문화</a></li>
+                <li><a href="#">STX건설연혁</a></li>
+                <li><a href="#">조직안내</a></li>
+                <li><a href="#">윤리경영</a></li>
+                <li><a href="#">안전·환경·품질경영</a></li>
+                <li><a href="#">찾아오시는길</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">사업분야</a>
+              <ul class="depth2">
+                <li><a href="#">건축사업</a></li>
+                <li><a href="#">주택사업</a></li>
+                <li><a href="#">토목사업</a></li>
+                <li><a href="#">플랜트/공작기계사업</a></li>
+                <li><a href="#">해외사업</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">사회공헌</a>
+              <ul class="depth2">
+                <li><a href="#">나눔의생각</a></li>
+                <li><a href="#">주요활동분야</a></li>
+                <li><a href="#">활동현황</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">홍보센터</a>
+              <ul class="depth2">
+                <li><a href="#">홍보동영상</a></li>
+                <li><a href="#">홍보브로슈어</a></li>
+                <li><a href="#">STX건설뉴스</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">고객지원</a>
+              <ul class="depth2">
+                <li><a href="#">자주묻는질문</a></li>
+                <li><a href="#">고객문의</a></li>
+              </ul>
+            </li>
+            <li>
+              <a href="#">채용정보</a>
+              <ul class="depth2">
+                <li><a href="#">채용안내</a></li>
+                <li><a href="#">채용공고</a></li>
+                <li><a href="#">채용FAQ</a></li>
+              </ul>
+            </li>
+          </ul>
+        </nav>
+        <div class="lang">
+          <a href="#">ENG</a>
+          <i class="lang-bar"></i>
+          <a href="#" class="lang-active">KOR</a>
+        </div>
+      </div>
+    </header>
+    <!-- visual -->
+    <section class="visual">
+      <div class="inner">
+        <h2 class="visual-title">BEST OF THE WORLD <br>
+          STX Engineering & Construction</h2>
+        <p class="visual-txt">세계최고를 향해 STX건설이 힘차게 질주합니다!</p>
+        <button class="visual-bt">이동</button>
+      </div>
+    </section>
+    <!-- 업무 파트 -->
+    <section class="part">
+      <div class="inner">
+        <h2 class="part-title">STX Engineering & Construction Business</h2>
+        <p class="part-txt">
+          STX건설은 건문 역량 강화를 통해 건축, 주택, 토목, 플랜트 사업 영역에서 <br>
+          탁월한 성과를 인정받은 기업으로 자연과 기술의 공간에 인류의 가치를 추구합니다.
+        </p>
+        <ul class="part-list clearfix">
+          <li>
+            <a href="#">
+              <h3>건축사업</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <h3>주택사업</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <h3>토목사업</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <h3>플랜트/공작기계사업</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <h3>해외사업</h3>
+            </a>
+          </li>
+        </ul>
+        </div>
+    </section>
+    <!-- 새소식 -->
+    <section class="news">
+      <div class="inner clearfix">
 
+        <div class="news-box">
+          <h3>공지사항</h3>
+          <ul class="news-list">
+            <li><a href="#"><span>에스티엑스건설자산관리 주식회사 해산결의에 따른 채권신고 안내 공고 (2차)</span></a></li>
+            <li><a href="#"><span>에스티엑스건설자산관리 주식회사 해산결의에 따른 채권신고 안내 공고 (1차)</span></a></li>
+            <li><a href="#"><span>2021년도 협력업체 모집공고</span></a></li>
+            <li><a href="#"><span>STX건설 상호 사용 관련 안내</span></a></li>
+          </ul>
+        </div>
+
+        <div class="news-box">
+          <h3>보도자료</h3>
+          <ul class="news-list">
+            <li><a href="#"><span>STX건설, 춘천 레고랜드 테마파크 시공사 ‘선정’</span></a></li>
+            <li><a href="#"><span>STX건설, 2018년 성장 '청신호'</span></a></li>
+          </ul>
+        </div>
+
+      </div>
+    </section>
+    <!-- 고객센터 -->
+    <section class="cs"></section>
+    <!-- 소개 -->
+    <section class="about"></section>
+    <!-- 하단 -->
+    <footer class="footer"></footer>
+  </div>
 </body>
 
 </html>
