STX 클론 코딩 작업 완료

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="format-detection" content="telephone=no">
 
   <title>STX건설</title>
-  <link rel="shortcut icon" href="images/favicon.jpg" />
+  <link rel="shortcut icon" href="images/favicon.png" />
   <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon.png">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -49,6 +49,21 @@
 </head>
 
 <body>
+  <!-- 안내창 -->
+  <div class="modal-wrap">
+    <div class="modal-main">
+      <h1>STX 건설 클론코딩</h1>
+      <p>
+        이 사이트는 <b>스터디용</b>으로 제작되었으며 리소스는 <strong>원저작자</strong>에게 있습니다. <br>
+        해당 사이트 관련 문제 사항이 있으시면 연락해주시면 삭제하겠습니다.<br>
+        본 사이트는 Chrome 에 최적화되어 있습니다.
+      </p>
+
+      <button class="modal-close">
+        <i class="fas fa-times"></i>
+      </button>
+    </div>
+  </div>
   <div class="wrap">
     <!-- 상단 -->
     <header class="header">
