파비콘추가

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="format-detection" content="telephone=no">
 
   <title>STX건설</title>
-  <link rel="shortcut icon" href="images/favicon.png" />
-  <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon.png">
+  <link rel="shortcut icon" href="images/favicon-red.png" />
+  <link rel="apple-touch-icon-precomposed" href="images/apple-touch-icon-red.png">
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport"
