--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link
     href="https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
     rel="stylesheet">
-  <!-- 폰드어썸 -->
+  <!-- 폰트어썸 -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css"
     integrity="sha512-gMjQeDaELJ0ryCI+FtItusU9MkAifCZcGq789FrzkiM49D8lbDhoaUaIX4ASU187wofMNlgBJ4ckbrXM9sE6Pg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -52,12 +52,15 @@
   <!-- 안내창 -->
   <div class="modal-wrap">
     <div class="modal-main">
+      <div class="modal-icon"><span class="material-icons-outlined">announcement</span></div>      
       <h1>STX 건설 클론코딩</h1>
       <p>
         이 사이트는 <b>스터디용</b>으로 제작되었으며 리소스는 <strong>원저작자</strong>에게 있습니다. <br>
         해당 사이트 관련 문제 사항이 있으시면 연락해주시면 삭제하겠습니다.<br>
         본 사이트는 Chrome 에 최적화되어 있습니다.
       </p>
+      <h3>Rreview</h3>
+      <p></p>
 
       <button class="modal-close">
         <i class="fas fa-times"></i>
