--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
         </p>
 
         <div class="modal-bottom">
-          <span>* 본 사이트는 Chrome 에 최적화되어 있습니다.</span>
+          <span
+            >* 본 사이트는 <strong>Chrome</strong> 에 최적화되어 있습니다.</span
+          >
           <span
             >*해당 사이트 관련 문제사항이 있을시 연락해주시면
             삭제하겠습니다.</span
